[tool.poetry]
name = "tut09"
version = "0.1.0"
description = ""
authors = ["Huanyi Chen <huanyi.chen@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
jupyterlab = "^4.3.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
